--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
 
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-balanced">
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
